--- a/scrawny/package.json
+++ b/scrawny/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.3",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
+    "react-chartjs-3": "^2.7.7",
     "react-d3-speedometer": "^0.4.2",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
